# nidus

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE-RUST-GO.md  BENCHMARKS.md  BUSINESS-MODEL.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.production  Dockerfile.secure  LAUNCH-POST.md  Makefile  OPTIMIZATION-ROADMAP.md  PERFORMANCE.md  PLAN-MIGRATION.md  README.md  RESEARCH-COMPETITIVE.md  RESEARCH-EDGE-OBSERVABILITY.md  RESEARCH-FIRECRACKER.md  RESEARCH-PHASE4.md  ROADMAP-48M.md  ROADMAP.md  SECURITY-HARDENING.md  SECURITY.md  TEST-REPORT.md  VPS-COMPARISON.md  benchmark.sh  docker-compose.lite.yml  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.cjs  init.sql  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  start-local.sh  start.sh  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  docs.yml  test.yml
actions/nidus-deploy/: action.yml
app/Nidus/: Package.swift
app/Nidus/.build/: build.db  debug.yaml  plugin-tools.yaml
app/Nidus/Sources/Nidus/: ContentView.swift  NidusApp.swift
apps/api/: Dockerfile  go.mod  go.sum  handlers_admin.go  handlers_billing.go  handlers_cron.go  handlers_test.go  handlers_tokens.go  main.go  main_test.go
apps/api/mail/: mail.go
apps/control-plane/: jest.config.js  package-lock.json  package.json  tsconfig.json
apps/control-plane/prisma/: schema.prisma  seed.mjs
apps/control-plane/prisma/migrations/: 001_add_preview_deployments.sql
apps/control-plane/src/: app.module.ts  main.ts  performance.module.ts
apps/control-plane/src/auth/: auth.controller.spec.ts  auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  jwt.strategy.ts
apps/dashboard/: next.config.mjs  package-lock.json  package.json  vercel.json
apps/dashboard/public/: api-docs.html  community.html  index.html  install.sh
apps/proxy/: Cargo.toml  Dockerfile  ecosystem.config.js  go.mod  proxy.go
apps/proxy/src/: container_router.rs  main.rs  rate_limiter.rs
certs/: ca-cert.srl
cli/: index.js  npm-package.json  package-lock.json  package.json
cli/src/: auth.js  config.js  db.js  deploy.js  env.js  logs.js  projects.js
deploy/: deploy.sh
deploy/caddy/: Caddyfile
deploy/scripts/: 01-ssh-hardening.sh  02-firewall.sh  03-fail2ban.sh  04-docker-security.sh  05-general-security.sh  06-generate-secrets.sh
docker/: Caddyfile  nidus-monitoring.yml  prometheus.yml
docker/grafana/dashboards/: cvaprovado-overview.json  dashboards.yml  nidus.json
docs/: index.md  openapi.yaml  package-lock.json  package.json  vercel.json
docs-site/: package-lock.json
docs-site/src/app/: layout.tsx  page.tsx
docs/.vitepress/: config.js  config.ts
docs/api/: env.md  rest.md
docs/en/: index.md
docs/en/api/: rest.md
docs/en/guides/: getting-started.md  quick-start.md
docs/guides/: ci-cd.md  cli.md  compose.md  docker.md  domains.md  getting-started.md  git-deploy.md  sdk.md  volumes.md
docs/sessions/: 2026-06-23.md
grafana/dashboards/: nidus-overview.json
landing-page/: index.html
landing-page/blog/: index.html
landing-page/community/: index.html
mcp/mail/: server.js
rust/: Cargo.toml
rust/nidus-builder/: Cargo.toml  nidus-builder.cdx.json
rust/nidus-builder/src/: main.rs
rust/nidus-cli/: Cargo.toml
rust/nidus-cli/src/: main.rs
rust/nidus-edge/: Cargo.toml  nidus-edge.cdx.json
rust/nidus-edge/examples/: api-handler.rs  hello.rs
rust/nidus-edge/src/: main.rs
rust/nidus-mesh/: Cargo.toml
rust/nidus-mesh/proto/: project.proto
rust/nidus-mesh/src/: lib.rs  server.rs
rust/nidus-proxy/: Cargo.toml  nidus-proxy.cdx.json
rust/nidus-proxy/src/: main.rs  metrics.rs  proxy.rs  router.rs
rust/nidus-vmm/: Cargo.toml
rust/nidus-vmm/src/: main.rs
rust/stackrun-cli/: Cargo.toml  nidus-cli.cdx.json
rust/stackrun-cli/src/: main.rs
rust/stackrun-edge/: Cargo.toml
rust/stackrun-edge/examples/: api-handler.rs  hello.rs
rust/stackrun-edge/src/: engine.rs  main.rs
rust/stackrun-mesh/: build.rs  nidus-mesh.cdx.json
rust/stackrun-mesh/proto/: deploy.proto  health.proto
rust/stackrun-mesh/src/: tls.rs
rust/stackrun-proxy/benches/: proxy_bench.rs
rust/stackrun-proxy/src/: main.rs
rust/stackrun-vmm/src/: main.rs
sbom/: cargo-audit.json  gitleaks.json  nidus-sbom.cdx.json  trivy-nidus-my-express:latest.json  trivy-nidus-node-app:latest.json
sbom/sbom-parts/: nidus-builder.cdx.json  nidus-cli.cdx.json  nidus-edge.cdx.json  nidus-mesh.cdx.json  nidus-proxy.cdx.json
scripts/: backup-db.sh  backup.sh  benchmark-proxy.sh  build-kernel.sh  build-rootfs.sh  canary-deploy.sh  combine-sbom.py  docker-cleanup.sh  gen-dev-certs.sh  generate-sbom.sh  health-check.sh  health-gate.sh  memory-compare.sh  setup.sh  zero-downtime-deploy.sh
templates/: express.yaml  nextjs.yaml  schema.yaml  wordpress.yaml
workers/deploy/: CONFIG-V2.md  DEPLOY-WORKER-V2.md  Dockerfile  compose.go  config.go  docker_ops.go  framework.go  go.mod  go.sum  healthcheck.go  main.go  main_test.go  main_v2.go  metrics.go  notify.go
(+341 files in other folders)
