[package]
name = "nidus-proxy"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "compression-deflate", "compression-gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"] }
dashmap = "6"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
bytes = "1"
http-body-util = "0.1"
tokio-tungstenite = "0.24"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
