[package]
name = "nidus-edge"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "21"
wasmtime-wasi = "21"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.12"
parking_lot = "0.12"
