[package]
name = "stackrun-cli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "stackrun"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
console = "0.15"
colored = "2"
spinoff = "0.8"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"], default-features = false }
futures-util = "0.3"
dirs = "5"
